# lammps-metal

./: .gitignore  CLAUDE.md  METAL_PORT_STATUS.md  README.md  REAXFF_FORCES_PLAN.md
.github/workflows/: check-cpp23.yml  check-gnu-make.yml  check-vla.yml  codeql-analysis.yml  compile-msvc.yml  coverity.yml  full-regression.yml  kokkos-regression.yaml  lammps-gui-flatpak.yml  quick-regression.yml  style-check.yml  unittest-arm64.yml  unittest-kokkos.yml  unittest-linux.yml  unittest-macos.yml  unittest-single.yml
cmake/Modules/: Tools.cmake
cmake/presets/: kokkos-packages.cmake
doc/: lammps.1
doc/src/: Build_basics.rst  Build_development.rst  Build_extras.rst  Build_make.rst  Build_manual.rst  Commands_fix.rst  Commands_pair.rst  Developer_unittest.rst  Developer_write_docs.rst  Howto_bpm.rst  Howto_cmake.rst  Howto_granular_surfaces.rst  Howto_peri.rst  Howto_tip4p.rst  Howto_viz.rst  Howto_wsl.rst  Packages_details.rst  Speed_kokkos.rst  Tools.rst  bond_bpm_rotational.rst  bond_fene.rst  bond_gaussian.rst  bond_quartic_exp.rst  change_box.rst  compute_property_atom.rst  dump_image.rst  fix.rst  fix_baoab.rst  fix_brownian.rst  fix_gemc.rst  fix_graphics_chunk.rst  fix_graphics_labels.rst  fix_graphics_replica.rst  fix_ilves.rst  fix_nonaffine_displacement.rst  fix_nve_bpm_sphere.rst  fix_shake.rst  fix_store_state.rst  fix_surface_global.rst  fix_surface_local.rst  (+23 more)
examples/GRAPHICS/: in.breakable
examples/airebo/: CH.airebo-bc  in.airebo-bc  log.13Jun2026.airebo-bc.g++.1  log.13Jun2026.airebo-bc.g++.4
examples/dipole/: in.charge_dipole  log.26Jun26.charge_dipole.g++.1  log.26Jun26.charge_dipole.g++.4
examples/reaxff/: in.reaxff.rdx.gpu  out.cpu  out.gpu
lib/gpu/: device.metal  gen_dummy_cubin.py  generate_metals.py  lal_answer.h  lal_atom.h  lal_base_amoeba.h  lal_base_atomic.cpp  lal_base_atomic.h  lal_base_charge.h  lal_base_dipole.h  lal_base_dpd.h  lal_base_ellipsoid.h  lal_base_sph.h  lal_base_three.h  lal_device.cpp  lal_device.h  lal_ewald.h  lal_lj.cpp  lal_neighbor_shared.h  lal_pppm.h  lal_reaxff.cpp  lal_reaxff.h  lal_reaxff_ext.cpp  lj.metal  metal-cpp-impl.cpp  reaxff.metal  refactor_metal.py  test_cast.cpp  test_float  test_float.cpp  test_metal_ptr.cpp
potentials/: CH.airebo-bc
src/: .gitignore  Makefile  angle_hybrid.cpp  angle_zero.cpp  atom.cpp  atom_vec.cpp  atom_vec_body.cpp  atom_vec_ellipsoid.cpp  atom_vec_line.cpp  atom_vec_sphere.cpp  atom_vec_tri.cpp  balance.cpp  body.cpp  bond_hybrid.cpp  bond_zero.cpp  change_box.cpp  comm_tiled.cpp  compute_aggregate_atom.cpp  compute_centro_atom.cpp  compute_centroid_stress_atom.cpp  compute_cluster_atom.cpp  compute_coord_atom.cpp  compute_group_group.cpp  compute_orientorder_atom.cpp  compute_pair_local.cpp  compute_pressure.cpp  compute_property_atom.cpp  compute_property_chunk.cpp  compute_property_local.cpp  compute_stress_atom.cpp  compute_temp_sphere.cpp  create_atoms.cpp  dihedral_hybrid.cpp  ewald_const.h  fix_bond_history.cpp  fix_deform.cpp  fix_external.cpp  fix_langevin.cpp  fix_neigh_history.cpp  fix_nve.cpp  (+57 more)
src/AMOEBA/: fix_amoeba_bitorsion.cpp  improper_amoeba.cpp  pair_amoeba.cpp
src/ASPHERE/: compute_erotate_asphere.cpp  fix_nh_asphere.cpp  fix_nve_asphere.cpp  fix_nve_asphere_noforce.cpp  fix_nve_line.cpp  fix_nve_tri.cpp  pair_gayberne.cpp  pair_line_lj.cpp  pair_resquared.cpp  pair_tri_lj.cpp
src/BOCS/: compute_pressure_bocs.cpp  pair_ldd.cpp
src/BODY/: fix_nh_body.cpp  fix_nve_body.cpp  fix_wall_body_polygon.cpp  fix_wall_body_polyhedron.cpp  pair_body_nparticle.cpp  pair_body_rounded_polygon.cpp  pair_body_rounded_polyhedron.cpp
src/BPM/: atom_vec_bpm_sphere.cpp
src/BROWNIAN/: fix_brownian_base.cpp  fix_brownian_base.h
src/CG-DNA/: bond_oxdna_fene.h  fix_nve_dot.cpp  fix_nve_dotc_langevin.cpp  pair_oxdna2_coaxstk.cpp  pair_oxdna2_dh.cpp  pair_oxdna3_xstk.cpp  pair_oxdna_coaxstk.cpp  pair_oxdna_excv.cpp  pair_oxdna_hbond.cpp  pair_oxdna_stk.cpp  pair_oxdna_xstk.cpp  pair_oxrna2_stk.cpp  pair_oxrna2_xstk.cpp
src/CLASS2/: angle_class2.cpp  angle_class2xe.cpp  bond_class2.cpp  dihedral_class2.cpp  dihedral_class2xe.cpp  improper_class2.cpp  pair_lj_class2.cpp  pair_lj_class2_coul_cut.cpp  (+1 more)
unittest/: CMakeLists.txt  error_stats.cpp  yaml_writer.cpp
unittest/granular/: CMakeLists.txt  test_analytic_models.cpp  test_analytic_models.h  test_config.h  test_config_reader.cpp  test_config_reader.h  test_dem_01.cpp  test_dem_02.cpp  test_dem_03.cpp  test_dem_04.cpp  test_dem_05.cpp  test_dem_06.cpp  test_dem_07.cpp  test_dem_08.cpp  test_dem_09.cpp  test_dem_10.cpp  test_dem_11.cpp  test_dem_common.cpp  test_dem_common.h  test_main.cpp  test_main.h
unittest/granular/tests/: clump_tetra.mol  dem01-granular-hooke-3d-si.yaml  dem01-hooke-2d-lj.yaml  dem01-hooke-3d-si.yaml  dem01-hookehistory-3d-si.yaml  dem02-hooke-2d-lj.yaml  dem02-hooke-3d-si.yaml  dem02-hookehistory-3d-si.yaml  dem02-restitution-3d-si.yaml  dem03-elastic-3d-si.yaml  dem03-granular-hooke-3d-si.yaml  dem03-hooke-3d-si.yaml  dem03-unequal-3d-si.yaml  dem04-granular-3d-si.yaml  dem04-hookehistory-3d-si.yaml  dem04-hookehistory-mu02-3d-si.yaml  dem04-hookehistory-mu10-3d-si.yaml  dem05-granular-oblique-3d.yaml  dem05-granular-oblique-steep-3d.yaml  dem05-hertz-oblique-3d.yaml  dem05-hookehistory-grazing-3d.yaml  dem05-hookehistory-oblique-3d.yaml  dem05-mindlin-grazing-3d.yaml  dem05-mindlin-rescale-grazing-3d.yaml  dem05-mindlin-steep-3d.yaml  dem05-superellipsoid-3d.yaml  dem06-nonlinear-3d.yaml  dem06-viscous-linear-3d.yaml  dem07-rolling-3d-si.yaml  dem07-rolling-mu005-3d-si.yaml  dem07-rolling-mu02-3d-si.yaml  dem08-dmt-twosphere-3d.yaml  dem08-dmt-wall-3d.yaml  dem08-jkr-twosphere-3d.yaml  dem09-normal-3d.yaml  dem09-shear-3d.yaml  dem09-spin-identical-3d.yaml  dem09-spin-unequal-3d.yaml  dem09-spin-wall-3d.yaml  dem10-aor-spheres-3d.yaml  (+5 more)
(+671 files in other folders)
